link register add

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <span>Account</span>
                         <div class="hover-down-box">
                             <a href="./login/login.html">Login</a>
-                            <a href="">Register</a>
+                            <a href="./register/register.html">Register</a>
                         </div>
                     </div>
 
