--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="./new style luci/style.css">
     <script src="https://kit.fontawesome.com/24c494a6b6.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -136,9 +137,8 @@
                 </div>
                 <div id="secondFourth">
                     <div class="cart">
-                        <span id="symbol"><i class="fa-solid fa-cart-arrow-down"></i
-              ></span>
-                        <span>Cart</span>
+                        <span id="symbol"><i class="fa-solid fa-cart-arrow-down"></i></span>
+                        <span id="check-cart-part">Cart</span>
                     </div>
                 </div>
                 <!-- </div> -->
@@ -527,4 +527,13 @@
         btn2.classList.add("active");
         btn1.classList.remove("active");
     };
+
+
+
+
+    document.querySelector("#check-cart-part").addEventListener("click", carthreflink);
+
+    function carthreflink() {
+        window.location.href = "./cart/cart.html";
+    }
 </script>
