--- a/cart/cart.html
+++ b/cart/cart.html
@@ -11,8 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Palanquin+Dark&display=swap" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="../payment/payment.html"> -->
-    <!-- <link rel="stylesheet" href="../database/database.html"> -->
+    <!-- <link rel="stylesheet" href="../index.html"> -->
+
 </head>
 
 <body>
