--- a/index.html
+++ b/index.html
@@ -136,9 +136,15 @@
 
                 </div>
                 <div id="secondFourth">
-                    <div class="cart">
+                    <div class="cart" id="check-cart-part">
                         <span id="symbol"><i class="fa-solid fa-cart-arrow-down"></i></span>
-                        <span id="check-cart-part">Cart</span>
+                        <span>Cart</span>
+                        <div class="hover-down-box dfsd">
+                            <div class="empty-things">
+                                There are currently no items in your cart.
+                            </div>
+
+                        </div>
                     </div>
                 </div>
                 <!-- </div> -->
