--- a/payment/paymentdel.html
+++ b/payment/paymentdel.html
@@ -116,7 +116,7 @@
               </svg>
         </div>
     </div>
-    <section class="payment mode">
+    <section class="payment mode checkout-as-a-guest">
         <div class="align-items-center">
             <div class="payable-amount">
                 <!-- <h1>Total Amount : <span id="show_total_current_amount"></span></h1> -->
