--- a/payment/payment.html
+++ b/payment/payment.html
@@ -90,7 +90,64 @@
               </svg>
         </div>
     </div>
-    <section class="payment mode">
+    <!-- <section class="conditinal-container">
+        <div class="mininize-all-things">
+            <h1>Login or sign up</h1>
+        </div>
+    </section> -->
+    <section class="checkout-as-a-guest">
+        <div class="minimize-container-as-want">
+            <h1>Checkout as a guest</h1>
+            <span>Complete your order without signing up, or sign up after payment.</span>
+            <div class="email-address">
+                <h1>1. Email and delivery address</h1>
+                <div class="emainaddress-input">
+                    <label for="">*Email address</label><br>
+                    <input type="email"><br>
+                    <label for="">We'll send the purchase receipt to this email.</label>
+                </div>
+                <div class="country">
+                    <label for="">*Country/Region</label><br>
+                    <select name="" id="selectcountry">
+                      <option value="">Please select</option>
+                      <option value="india">India</option>
+                      <option value="usa">United States</option>
+                      <option value="matla">Malta</option>
+                    </select>
+                </div>
+                <div class="name-section">
+                    <label for="">*Full Name</label><br>
+                    <input type="name">
+                </div>
+                <div class="zip-code">
+                    <label for="">*Zip Code/Postcode</label><br>
+                    <input type="number" maxlength="4">
+                </div>
+                <div class="company-name">
+                    <label for="">Company Name</label><br>
+                    <input type="text">
+                </div>
+                <div class="address">
+                    <label for="">*Address</label><br>
+                    <input type="text">
+                </div>
+                <div class="apartment">
+                    <label for="">*Apartment/Suite number</label><br>
+                    <input type="text">
+                </div>
+                <div class="contect-number">
+                    <label for="">Contact Number</label><br>
+                    <input type="number">
+                </div>
+                <div class="some-comment">
+                    <a href="">Why do we need your number?</a>
+                </div>
+            </div>
+        </div>
+        <section class="select delivery option">Please enter your address so we can calculate your delivery options.</section>
+    </section>
+
+    <section class="payment mode checkout-as-a-guest">
         <div class="align-items-center">
             <div class="payable-amount">
                 <h1>Total Amount : <span id="show_total_current_amount"></span></h1>
@@ -123,13 +180,17 @@
         </div>
         </div>
     </section>
-
+    <!-- <section class="dfddjdf checkout-as-a-guest">
+        <div class="btn-process">
+            <a id="deliverypage">SUBMIT MY ORDER</a>
+        </div>
+    </section> -->
 </body>
 
 </html>
 
 <script>
-    document.querySelector("#timer-payment-duration").innerHTML = 0 + ":" + 5;
+    document.querySelector("#timer-payment-duration").innerHTML = 4 + ":" + 00;
     startTimer();
 
 
@@ -170,7 +231,7 @@
 
     function data() {
         event.preventDefault();
-        var card = document.querySelector("#card").value;
+        var card = document.querySelector("#deliverypage").value;
         if (card == "") {
             alert("fill the card details");
         } else {
