--- a/payment/payment.html
+++ b/payment/payment.html
@@ -231,7 +231,7 @@
 
     function data() {
         event.preventDefault();
-        var card = document.querySelector("#deliverypage").value;
+        var card = document.querySelector("#card").value;
         if (card == "") {
             alert("fill the card details");
         } else {
