update if cart empty

--- a/cart/cart.html
+++ b/cart/cart.html
@@ -283,7 +283,15 @@
             </div>
         </div>
     </section>
-
+    <section id="if_cart_empty_show">
+        <div class="minizise_as_you_want">
+            <h1>Your Cart</h1>
+            <hr>
+            <center id="text-color">There are currently no items in your cart.</center>
+            <center id="btn-decoration"><button>CONTINUE SHOPPING</button></center>
+            <div id="append_img_box_here"></div>
+        </div>
+    </section>
     <div id="footer">
         <div id="firstFoot">
             <div id="firstSubFoot">
