--- a/index.html
+++ b/index.html
@@ -128,8 +128,15 @@
                         <span id="symbol"><i class="fa-regular fa-user"></i></span>
                         <span>Account</span>
                         <div class="hover-down-box">
-                            <a href="./login/login.html">Login</a>
-                            <a href="./register/register.html">Register</a>
+                            <div class="conditional-thin-if-not-login">
+                                <a href="./login/login.html">Login</a>
+                                <a href="./register/register.html">Register</a>
+                            </div>
+                            <div class="login-then-show-name-div">
+                                <a class="login-then-show-name" id="style-class-improve">
+                                    <a id="logoutuser">Logout</a>
+                                </a>
+                            </div>
                         </div>
                     </div>
 
@@ -543,8 +550,36 @@
     function carthreflink() {
         window.location.href = "./cart/cart.html";
     }
-    var database = JSON.parse(localStorage.getItem("cartadddatabase"));
-    var lengthofbagitems = database.length;
-    // console.log(lengthofbagitems);
-    document.querySelector("#add-count-items").innerText = lengthofbagitems;
+    // var database = JSON.parse(localStorage.getItem("cartadddatabase"));
+    // var lengthofbagitems = database.length;
+    // // console.log(lengthofbagitems);
+    // document.querySelector("#add-count-items").innerText = lengthofbagitems;
+    //user details shows
+    var gettingcurrentuser = JSON.parse(localStorage.getItem("currentuser"));
+    gettingcurrentuser.map(function(el) {
+        if (el.name == null) {
+            document.querySelector(".login-then-show-name").style.display = "none";
+            document.querySelector(".conditional-thin-if-not-login").style.display = "block";
+
+        } else {
+            document.querySelector(".login-then-show-name").innerText = `Welcome ${el.name}`;
+            document.querySelector(".conditional-thin-if-not-login").style.display = "none";
+            console.log(el.name);
+        }
+    });
+
+    //logout feature
+
+
+    // logoutuser
+    document.querySelector("#logoutuser").addEventListener("click", logoutcurrentuser);
+
+    function logoutcurrentuser() {
+        gettingcurrentuser.map(function(el, i) {
+            gettingcurrentuser.splice(i, 10000);
+            window.location.reload();
+            localStorage.setItem("currentuser", JSON.stringify(gettingcurrentuser));
+        });
+
+    }
 </script>
