index chage add

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- HEADER STARTS HERE -->
     <div id="first">
         <div id="firstSub">
-            <div id="country">us - USDD</div>
+            <div id="country">us - USDDD</div>
             <div id="help">Help</div>
         </div>
     </div>
