logout problem solve

--- a/index.html
+++ b/index.html
@@ -560,16 +560,18 @@
         if (el.name == null) {
             document.querySelector(".login-then-show-name").style.display = "none";
             document.querySelector(".conditional-thin-if-not-login").style.display = "block";
+            document.querySelector("#logoutuser").style.display = "none";
 
         } else {
             document.querySelector(".login-then-show-name").innerText = `Welcome ${el.name}`;
             document.querySelector(".conditional-thin-if-not-login").style.display = "none";
+            document.querySelector("#logoutuser").style.display = "block";
             console.log(el.name);
         }
     });
 
     //logout feature
-
+    // #logoutuser
 
     // logoutuser
     document.querySelector("#logoutuser").addEventListener("click", logoutcurrentuser);
