--- a/index.html
+++ b/index.html
@@ -550,11 +550,11 @@
     function carthreflink() {
         window.location.href = "./cart/cart.html";
     }
-    // var database = JSON.parse(localStorage.getItem("cartadddatabase"));
-    // var lengthofbagitems = database.length;
-    // // console.log(lengthofbagitems);
-    // document.querySelector("#add-count-items").innerText = lengthofbagitems;
-    //user details shows
+    var database = JSON.parse(localStorage.getItem("cartadddatabase"));
+    var lengthofbagitems = database.length;
+    // console.log(lengthofbagitems);
+    document.querySelector("#add-count-items").innerText = lengthofbagitems;
+    // user details shows
     var gettingcurrentuser = JSON.parse(localStorage.getItem("currentuser"));
     gettingcurrentuser.map(function(el) {
         if (el.name == null) {
