update cart and user

--- a/index.html
+++ b/index.html
@@ -550,9 +550,9 @@
     function carthreflink() {
         window.location.href = "./cart/cart.html";
     }
-    var database = JSON.parse(localStorage.getItem("cartadddatabase"));
-    var lengthofbagitems = database.length;
-    document.querySelector("#add-count-items").innerText = lengthofbagitems;
+    // var database = JSON.parse(localStorage.getItem("cartadddatabase"));
+    // var lengthofbagitems = database.length;
+    // document.querySelector("#add-count-items").innerText = lengthofbagitems;
     // user details shows
     var gettingcurrentuser = JSON.parse(localStorage.getItem("currentuser"));
     gettingcurrentuser.map(function(el) {
