--- a/cart/cart.html
+++ b/cart/cart.html
@@ -141,6 +141,7 @@
                             <div class="login-then-show-name-div">
                                 <a class="login-then-show-name" id="style-class-improve">
                                     <a id="logoutuser">Logout</a>
+                                    <a href="../temp database/database.html">access database temp</a>
                                 </a>
                             </div>
                         </div>
