--- a/cart/cart.html
+++ b/cart/cart.html
@@ -158,7 +158,18 @@
                             <div class="empty-things">
                                 There are currently no items in your cart.
                             </div>
-
+                            <div class="items-availble-then-show">
+                                <div class="giving-some-style-as-you-wnat">
+                                    <div class="giving-items-some-flexing-for-management">
+                                        <div class="total-of-items"></div>
+                                        <div class="price-of-items-total"></div>
+                                    </div>
+                                    <div class="btn-view-cart">
+                                        <button>VIEW CART</button>
+                                    </div>
+                                </div>
+                                <div class="scroll-able-items-container"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
