--- a/index.html
+++ b/index.html
@@ -220,8 +220,130 @@
                 </div>
               </div>
             </div>
-            <div>Skin Care</div>
-            <div>Hair</div>
+            <div class="BAR">
+              Skin Care
+              <div class="drop">
+                <div class="outsideSkin">
+                  <div class="inside">
+                    <div><a href="">Popular Categories </a></div>
+                    <div><a href="">View All Skin Care </a></div>
+                    <div><a href="">New In </a></div>
+                    <div><a href="">Clean Skincare </a></div>
+                    <div><a href="">5* Rated Products </a></div>
+                    <div><a href="">Gifts & Sets </a></div>
+                    <div><a href="">Supersizes & Duo </a></div>
+                    <div><a href="">Travel Sizes </a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href="">By Product Type </a></div>
+                    <div><a href="">Cleansers </a></div>
+                    <div><a href="">Moisturizers </a></div>
+                    <div><a href="">Serums </a></div>
+                    <div><a href="">Exfoliators </a></div>
+                    <div><a href="">Masks </a></div>
+                    <div><a href="">Eye Care </a></div>
+                    <div><a href="">Toners </a></div>
+                    <div><a href="">Lip Care </a></div>
+                    <div><a href="">Oils </a></div>
+                    <div><a href="">Treatments </a></div>
+                    <div><a href="">Mists </a></div>
+                    <div><a href="">Peels </a></div>
+                    <div><a href="">Tools </a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href="">By Ingredient </a></div>
+                    <div><a href="">Vitamin C </a></div>
+                    <div><a href="">AHA </a></div>
+                    <div><a href="">Caffeine </a></div>
+                    <div><a href="">Retinol </a></div>
+                    <div><a href="">Hyaluronic Acid </a></div>
+                    <div><a href="">Niacinamide </a></div>
+                    <div><a href="">Lactic Acid </a></div>
+                    <div><a href="">Salicylic Acid </a></div>
+                    <div><a href="">Glycolic Acid </a></div>
+                    <div><a href="">Azelaic Acid </a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href="#">By Specific Concern </a></div>
+                    <div><a href="#">Acne & Blemishes </a></div>
+                    <div><a href="#">Fine Lines & Wrinkles </a></div>
+                    <div><a href="#"> Dark Circles </a></div>
+                    <div><a href="#">Dry Skin </a></div>
+                    <div><a href="#">Dullness </a></div>
+                    <div><a href="#">Lack of Firmness </a></div>
+                    <div><a href="#"> Pigmentation </a></div>
+                    <div><a href="#">Pregnancy Skincare </a></div>
+                    <div><a href="#">Redness & Rosacea </a></div>
+                    <div><a href="#">Sensitive Skin </a></div>
+                    <div><a href="#">Visible Pores </a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href="#">Sunscreen & Suncare </a></div>
+                    <div><a href="#">Take The SPF Quiz </a></div>
+                    <div><a href="#">SPF 30 and over </a></div>
+                    <div><a href="#">SPF 50 and over </a></div>
+                    <div><a href="#">After Sun </a></div>
+                    <div><a href="#">Tinted </a></div>
+                    <div><a href="#">Mineral </a></div>
+                    <div><a href="#">Eye Protection</a></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="BAR">
+              Hair
+              <div class="drop">
+                <div class="outsideHair">
+                  <div class="inside">
+                    <div><a href="#">Popular Categories </a></div>
+                    <div><a href="#">View All Hair Care </a></div>
+                    <div><a href="#">New In </a></div>
+                    <div><a href="#"> Clean Hair Care </a></div>
+                    <div><a href="#">5* Rated Products </a></div>
+                    <div><a href="#">Gifts & Sets </a></div>
+                    <div><a href="#">Travel Sizes </a></div>
+                    <div><a href="#">Supersize & Duos </a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href="#">Product Type </a></div>
+                    <div><a href="#">Shampoo </a></div>
+                    <div><a href="#">Conditioners </a></div>
+                    <div><a href="#"> Hair Treatments </a></div>
+                    <div><a href="#">Hair Masks </a></div>
+                    <div><a href="#">Hair Oils </a></div>
+                    <div><a href="#">Hair Sprays </a></div>
+                    <div><a href="#"> Hair Styling </a></div>
+                    <div><a href="#">Hair Thinning & Loss </a></div>
+                    <div><a href="#"> Hair Color Treatments </a></div>
+                    <div><a href="#">Hair Supplements </a></div>
+                    <div><a href="#">Hair Brushes & Combs </a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href="#">Hair Type </a></div>
+                    <div><a href="#"> Anti-Dandruff & Scalp Care </a></div>
+                    <div><a href="#">Coarse & Textured Hair </a></div>
+                    <div><a href="#">Colored Hair </a></div>
+                    <div><a href="#">Curly & Wavy Hair </a></div>
+                    <div><a href="#">Damaged Hair </a></div>
+                    <div><a href="#">Dry Hair </a></div>
+                    <div><a href="#">Fine Hair </a></div>
+                    <div><a href="#">Oily Hair </a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href="#">Electrical </a></div>
+                    <div><a href="#">Flat Irons </a></div>
+                    <div><a href="#">Hair Dryers </a></div>
+                    <div><a href="#"> Rollers & Curling Tongs </a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href="#">Hair Removal </a></div>
+                    <div><a href="#">Hair Removal Devices </a></div>
+                    <div><a href="#"> Hair Removal Products </a></div>
+                    <div><a href="#">Men's Shaving Products</a></div>
+                  </div>
+                </div>
+              </div>
+            </div>
             <div>Makeup</div>
             <div>Tools</div>
             <div>Bath & Body</div>
