drop down added

--- a/index.html
+++ b/index.html
@@ -344,8 +344,83 @@
                 </div>
               </div>
             </div>
-            <div>Makeup</div>
-            <div>Tools</div>
+            <div class="BAR">
+              Makeup
+              <div class="drop">
+                <div class="outsideMakeup">
+                  <div class="inside">
+                    <div><a href="#">Popular Categories</a></div>
+                    <div><a href="#">View All Cosmetics</a></div>
+                    <div><a href="#"> New In</a></div>
+                    <div><a href="#"> Clean Makeup</a></div>
+                    <div><a href="#"> 5* Rated Products</a></div>
+                    <div><a href="#">Gifts & Sets</a></div>
+                    <div><a href="#">Brushes & Applicators</a></div>
+                    <div><a href="#">Makeup palettes</a></div>
+                    <div><a href="#"> Nails</a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href="#">Eyes</a></div>
+                    <div><a href="#">Eye Liners</a></div>
+                    <div><a href="#">Lash & Brow Enhancers</a></div>
+                    <div><a href="#">Eye Shadows</a></div>
+                    <div><a href="#">Mascaras</a></div>
+                    <div><a href="#">Brow Pencils</a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href="#">Face</a></div>
+                    <div><a href="#">BB & CC Cream</a></div>
+                    <div><a href="#"> Blushers</a></div>
+                    <div><a href="#">Bronzers</a></div>
+                    <div><a href="#">Color Correctors</a></div>
+                    <div><a href="#">Concealers</a></div>
+                    <div><a href="#">Contour</a></div>
+                    <div><a href="#">Face Powders </a></div>
+                    <div><a href="#">Foundations </a></div>
+                    <div><a href="#">Highlighters </a></div>
+                    <div><a href="#">Makeup Removers </a></div>
+                    <div><a href="#">Makeup Setting Spray</a></div>
+                    <div><a href="#">Primers</a></div>
+                    <div><a href="#">Tinted Moisturizer</a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href="#">Lips</a></div>
+                    <div><a href="#">Lipsticks</a></div>
+                    <div><a href="#">Lip Balms</a></div>
+                    <div><a href="#">Lip Glosses</a></div>
+                    <div><a href="#">Lip Liners</a></div>
+                    <div><a href="#">Lip Plumpers</a></div>
+                    <div><a href="#">Liquid Lipsticks</a></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="BAR">
+              Tools
+              <div class="drop">
+                <div class="outsideTools">
+                  <div class="inside">
+                    <div><a href="">Popular Categories </a></div>
+                    <div><a href="">View All Tools </a></div>
+                    <div><a href="">Makeup Brushes & Accessories </a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href="">Hair Care </a></div>
+                    <div><a href=""> Hair Dryers </a></div>
+                    <div><a href="">Flat Irons </a></div>
+                    <div><a href="">Rollers & Curling Irons </a></div>
+                    <div><a href="">Hair Brushes </a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href="">Skincare </a></div>
+                    <div><a href="">LED Light Therapy </a></div>
+                    <div><a href="">Facial Toning </a></div>
+                    <div><a href="">Cleansing </a></div>
+                    <div><a href="">Dermabrasion</a></div>
+                  </div>
+                </div>
+              </div>
+            </div>
             <div>Bath & Body</div>
             <div>Self-Care</div>
             <div>Fragrance</div>
