footer also complete and adding comment at footer place to know

--- a/cart/cart.html
+++ b/cart/cart.html
@@ -550,6 +550,9 @@
             <div id="append_img_box_here"></div>
         </div>
     </section>
+
+    <!-- footer start here -->
+
     <div id="footer">
         <div id="firstFoot">
             <div id="firstSubFoot">
@@ -693,7 +696,7 @@
                 <div id="pay">
                     <div id="paySecure">Pay securely with</div>
                     <div class="payments">
-                        <img src="./img/pay.png" alt="">
+                        <img src="../img/pay.png" alt="" />
                     </div>
                 </div>
             </div>
