drop down added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       src="https://kit.fontawesome.com/24c494a6b6.js"
       crossorigin="anonymous"
     ></script>
+    <!-- <link rel="stylesheet" href="./brands/brands.html"> -->
   </head>
 
   <body>
@@ -184,7 +185,7 @@
         <div id="border"></div>
         <div id="third">
           <div id="thirdInneer">
-            <div>Brands</div>
+            <div class="brandLink">Brands</div>
             <div>Anniversary Edit</div>
             <div>Sale</div>
             <div class="BAR">
@@ -421,10 +422,165 @@
                 </div>
               </div>
             </div>
-            <div>Bath & Body</div>
-            <div>Self-Care</div>
-            <div>Fragrance</div>
-            <div>New</div>
+            <div class="BAR">
+              Bath & Body
+              <div class="drop">
+                <div class="outsideBath">
+                  <div class="inside">
+                    <div><a href="#"> Popular Categories </a></div>
+                    <div><a href="#"> View All Bath & Body </a></div>
+                    <div><a href="#">New In </a></div>
+                    <div><a href="#"> Clean Bath & Body </a></div>
+                    <div><a href="#">5* Rated Products </a></div>
+                    <div><a href="#">Travel Sizes </a></div>
+                    <div><a href="#"> At Home Spa </a></div>
+                    <div><a href="#">Deodorants </a></div>
+                    <div><a href="#">Gifts & Sets </a></div>
+                    <div><a href="#">Oral Care </a></div>
+                    <div><a href="#">Mom & Baby </a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href="#">Bath & Shower </a></div>
+                    <div><a href="#">Baths Oils/Soak </a></div>
+                    <div><a href="#">Bath Salts </a></div>
+                    <div><a href="#">Body Washes </a></div>
+                    <div><a href="#">Cleansing Bars </a></div>
+                    <div><a href="#">Exfoliators </a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href="#">Self Tanners </a></div>
+                    <div><a href="#">Accessories </a></div>
+                    <div><a href="#">Pre-Tan Preparation </a></div>
+                    <div><a href="#">Body Tanners </a></div>
+                    <div><a href="#">Post Tanning </a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href="#">Moisturizers </a></div>
+                    <div><a href="#">Balms </a></div>
+                    <div><a href="#">Butters </a></div>
+                    <div><a href="#">Creams </a></div>
+                    <div><a href="#">Lotions </a></div>
+                    <div><a href="#">Oils </a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href="#">Targeted Care </a></div>
+                    <div><a href="#">Bust </a></div>
+                    <div><a href="#">Cellulite </a></div>
+                    <div><a href="#">Dry Skin </a></div>
+                    <div><a href="#">Hair Removal </a></div>
+                    <div><a href="#">Hand & Foot Care </a></div>
+                    <div><a href="#">Hand Soap, Sanitizers & Creams </a></div>
+                    <div><a href="#">Legs </a></div>
+                    <div><a href="#">Slimming & Sculpting </a></div>
+                    <div><a href="#"> Stretch Marks </a></div>
+                    <div><a href="#">Sunscreen</a></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="BAR">
+              Self-Care
+              <div class="drop">
+                <div class="outsideSelf">
+                  <div class="inside">
+                    <div><a href="">Popular Categories </a></div>
+                    <div><a href="">Self Care </a></div>
+                    <div><a href="">New In </a></div>
+                    <div><a href="">5* Rated Products </a></div>
+                    <div><a href="">At-Home Spa </a></div>
+                    <div><a href="">View All Wellness Products </a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href="">Sexual Wellness </a></div>
+                    <div><a href="">Devices </a></div>
+                    <div><a href="">Skin Care </a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href="">Supplements </a></div>
+                    <div><a href="">Skin </a></div>
+                    <div><a href=""> Hair </a></div>
+                    <div><a href="">Immune Boosting </a></div>
+                    <div><a href="">Health & Wellbeing </a></div>
+                    <div><a href="">Weight Loss </a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href="">Clean Beauty </a></div>
+                    <div><a href="">Clean Skincare </a></div>
+                    <div><a href=""> Clean Haircare </a></div>
+                    <div><a href="">Clean Makeup </a></div>
+                    <div><a href="">Clean Bath & Body</a></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="BAR">
+              Fragrance
+              <div class="drop">
+                <div class="outsideFragrance">
+                  <div class="inside">
+                    <div><a href="">Popular Categories </a></div>
+                    <div><a href="">View All Fragrance </a></div>
+                    <div><a href="">New In </a></div>
+                    <div><a href="">5* Rated Products </a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href="">Top Brands </a></div>
+                    <div><a href="">NEOM Organics </a></div>
+                    <div><a href="">Glasshouse Fragrances </a></div>
+                    <div><a href="">KORRES </a></div>
+                    <div><a href="">NEST Fragrances </a></div>
+                    <div><a href="">Molton Brown </a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href="">Personal Fragrance </a></div>
+                    <div><a href="">Perfume </a></div>
+                    <div><a href="">Eau de Toilette </a></div>
+                    <div><a href="">Body Spray </a></div>
+                    <div><a href="">For Her </a></div>
+                    <div><a href="">For Him </a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href=""> Home Fragrance </a></div>
+                    <div><a href="">Scented Candles </a></div>
+                    <div><a href="">Diffusers </a></div>
+                    <div><a href="">Aromatherapy </a></div>
+                    <div><a href="">Pillow Mists </a></div>
+                    <div><a href="">Room Sprays</a></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="BAR">
+              New
+              <div class="drop">
+                <div class="outsideNew">
+                  <div class="inside">
+                    <div><a href="#">Trophy Skin </a></div>
+                    <div><a href="#">Alpha-H </a></div>
+                    <div><a href="#">Alo </a></div>
+                    <div><a href="#">Foria </a></div>
+                    <div><a href="#">Nion </a></div>
+                    <div><a href="#">Sulwhasoo </a></div>
+                    <div><a href="#">Cowshed </a></div>
+                    <div><a href="#">Patricks </a></div>
+                    <div><a href="#">Marvis </a></div>
+                    <div><a href="#">Medik8 </a></div>
+                    <div><a href="#">Nurse Jamie </a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href="#">View All New </a></div>
+                    <div><a href="#">New Skin Care </a></div>
+                    <div><a href="#">New Makeup </a></div>
+                    <div><a href="#"> New Hair Care </a></div>
+                    <div><a href="#"> New Bath & Body </a></div>
+                  </div>
+                  <div class="inside">
+                    <div><a href="#">New Fragrance</a></div>
+                  </div>
+                  Latest brands
+                </div>
+              </div>
+            </div>
             <div>Advice</div>
           </div>
         </div>
@@ -967,5 +1123,11 @@
   } else {
     document.querySelector(".scroll-able-items-container").style.display =
       "block";
+  }
+
+  document.querySelector(".brandLink").addEventListener("click", brandLink);
+
+  function brandLink() {
+    window.location.href = "./brands/brands.html";
   }
 </script>
