--- a/index.html
+++ b/index.html
@@ -847,7 +847,7 @@
     }, 0);
 
     document.querySelector(".price-of-items-total").innerText = `$${subtotal}`;
-
+    // fff
     database.map(function(el, i, arr) {
         var box = document.createElement("div");
         var img = document.createElement("img");
