--- a/brands/sale.html
+++ b/brands/sale.html
@@ -10,6 +10,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,700;0,900;1,100;1,300;1,400&family=Poppins:wght@200;300;400&display=swap');
         
         </style>
+        <link rel="stylesheet" href="../cart/cart.html">
         
 </head>
 <body>
@@ -444,3 +445,10 @@
 src="https://kit.fontawesome.com/24c494a6b6.js"
 crossorigin="anonymous"
 ></script>
+<script>
+  // ../cart/cart.html
+  document.querySelector("#check-cart-part").addEventListener("click",sjhddf);
+  function sjhddf(){
+    window.location.href="../cart/cart.html";
+  }
+</script>
