image update size

--- a/cart/cart.html
+++ b/cart/cart.html
@@ -173,13 +173,14 @@
                     </div>
                 </div>
                 <!-- </div> -->
+
             </div>
             <div id="border"></div>
             <div id="third">
                 <div id="thirdInneer">
-                    <div>Brands</div>
+                    <div id="brand-link">Brands</div>
                     <div>Anniversary Edit</div>
-                    <div>Sale</div>
+                    <div id="brand-link">Sale</div>
                     <div class="BAR">
                         Build a Routine
                         <div class="drop">
@@ -702,7 +703,9 @@
             </div>
         </div>
     </div>
+
     <script src="./script/cart.js"></script>
+
 </body>
 
 </html>
